# 2DGame

./: .gitignore  CMakeLists.txt
assets/: frag.glsl  lightFrag.glsl  lightVert.glsl  vert.glsl
src/: main.cpp
src/Renderer/: baseModel.cpp  baseModel.h  camera.cpp  camera.h  debugWindow.cpp  debugWindow.h  light.cpp  light.h  materials.h  model.cpp  model.h  modelInterface.h  shaderProgram.cpp  shaderProgram.h  texture.cpp  texture.h  window.cpp  window.h
src/utils/: log.h
